--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,57 +1,98 @@
----
----
-References
-==========
-
-@book{ruby,
-  title     = {The Ruby Programming Language},
-  author    = {Flanagan, David and Matsumoto, Yukihiro},
-  year      = {2008},
-  publisher = {O'Reilly Media}
+@article{ref:tzc2022,
+  title =        {Informationally restricted correlations: a general
+                  framework for classical and quantum systems},
+  author =       {Armin Tavakoli, Emmanuel Zambrini Cruzeiro, Erik Woodhead,
+                  and Stefano Pironio},
+  journal =      {Quantum},
+  volume =       {6},
+  pages =        {620},
+  year =         {2022},
+  month =        {Jan},
+  archive =      {ar{X}iv},
+  eprint =       {2007.16145},
+  primaryClass = {quant-ph}
 }
 
- @Article{Beneke:1997hv,
-      author    = "M. Beneke and G. Buchalla and I. Dunietz",
-      title     = "{Mixing induced CP asymmetries in inclusive B decays}",
-      journal   = "Phys. Lett.",
-      volume    = "B393",
-      year      = "1997",
-      pages     = "132-142",
-      eprint        = "hep-ph/9609357"
- }
-
- @Article{ENt,
-  author = {Pauwels, Jef and Tavakoli, Armin and Woodhead, Erik and Pironio, Stefano},
-  title = {Entanglement in prepare-and-measure scenarios: many questions},
-  year = {2021},
-  eprint = "arXiv:2108.00442" 
+@article{ref:pt2021,
+  title =        {Entanglement in prepare-and-measure scenarios: many
+                  questions, a few answers},
+  author =       {Pauwels, Jef and Tavakoli, Armin and Woodhead, Erik and
+                  Pironio, Stefano},
+  year =         {2021},
+  archive =      {ar{X}iv},
+  eprint =       {2108.00442},
+  primaryClass = {quant-ph}
 }
 
+@article{ref:mpw2021,
+  title =        {Simple and practical DIQKD security analysis via BB84-type
+                  uncertainty relations and Pauli correlation constraints},
+  author =       {Masini, Michele and Pironio, Stefano and Woodhead, Erik},
+  year =         {2021},
+  archive =      {ar{X}iv},
+  eprint =       {2107.08894},
+  primaryClass = {quant-ph}
+}
 
-Entanglement in prepare-and-measure scenarios: many questions, a few answers
-Jef Pauwels, Armin Tavakoli, Erik Woodhead, and Stefano Pironio
-arXiv:2108.00442 [quant-ph] (2021)
+@article{ref:mc2021,
+  title =        {Resource efficient single photon source based on active
+                  frequency multiplexing},
+  author =       {Massar, Serge and Clemmen, Stephane},
+  journal =      {Optics Letters},
+  volume =       {46},
+  number =       {12},
+  pages =        {2832--2835},
+  doi =          {10.1364/OL.428148},
+  year =         {2021},
+  month =        {Jun},
+  archive =      {ar{X}iv},
+  eprint =       {2104.08491},
+  primaryClass = {quant-ph}
+}
 
-Simple and practical DIQKD security analysis via BB84-type uncertainty relations and Pauli correlation constraints
-Michele Masini, Stefano Pironio, and Erik Woodhead
-arXiv:2107.08894 [quant-ph] (2021)
+@article{ref:tp2021,
+  title =        {Correlations in entanglement-assisted prepare-and-measure
+                  scenarios},
+  author =       {Tavakoli, Armin and Pauwels, Jef and Woodhead, Erik and
+                  Pironio, Stefano},
+  journal =      {PRX Quantum},
+  publisher =    {American Physical Society},
+  volume =       {2},
+  issue =        {4},
+  pages =        {040357},
+  numpages =     {17},
+  doi =          {10.1103/PRXQuantum.2.040357},
+  year =         {2021},
+  month =        {Dec},
+  archive =      {ar{X}iv},
+  eprint =       {2103.10748},
+  primaryClass = {quant-ph}
+}
 
-Resource efficient single photon source based on active frequency multiplexing
-Serge Massar and Stephane Clemmen
-arXiv:2104.08491 [quant-ph] (2021)
+@article{ref:ms2021,
+  title =        {Characterizing the intersection of {QMA} and {coQMA}},
+  author =       {Massar, Serge and Santha,Miklos},
+  journal =      {Quantum Information Processing},
+  volume =       {20},
+  pages =        {396},
+  doi =          {10.1007/s11128-021-03326-3},
+  year =         {2021},
+  archive =      {ar{X}iv},
+  eprint =       {2102.03108},
+  primaryClass = {quant-ph}
+}
 
-Correlations in entanglement-assisted prepare-and-measure scenarios
-Armin Tavakoli, Jef Pauwels, Erik Woodhead, and Stefano Pironio
-arXiv:2103.10748 [quant-ph] (2021)
-
-Characterizing the intersection of QMA and coQMA
-Serge Massar and Miklos Santha
-arXiv:2102.03108 [quant-ph] (2021)
-
-Device-independent quantum key distribution with asymmetric CHSH inequalities
-Erik Woodhead, Antonio Acín, and Stefano Pironio
-arXiv:2007.16146 [quant-ph] (2020)
-
-Informationally restricted correlations: a general framework for classical and quantum systems
-Armin Tavakoli, Emmanuel Zambrini Cruzeiro, Erik Woodhead, and Stefano Pironio
-arXiv:2007.16145 [quant-ph] (2020)
+@article{ref:wap2021,
+  title =        {Device-independent quantum key distribution with asymmetric
+                  {CHSH} inequalities},
+  author =       {Erik Woodhead, Antonio Acín, and Stefano Pironio},
+  journal =      {Quantum},
+  volume =       {5},
+  pages =        {443},
+  year =         {2021},
+  month =        {Apr},
+  doi =          {10.22331/q-2021-04-26-443},
+  archive =      {ar{X}iv},
+  eprint =       {2007.16146},
+  primaryClass = {quant-ph}
+}
