fix issue in bibtex file

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,8 +1,8 @@
 @article{ref:tzc2022,
   title =        {Informationally restricted correlations: a general
                   framework for classical and quantum systems},
-  author =       {Armin Tavakoli, Emmanuel Zambrini Cruzeiro, Erik Woodhead,
-                  and Stefano Pironio},
+  author =       {Tavakoli, Armin and Zambrini Cruzeiro, Emmanuel and
+                  Woodhead,Erik and Pironio, Stefano },
   journal =      {Quantum},
   volume =       {6},
   pages =        {620},
