--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -85,7 +85,7 @@
 @article{ref:wap2021,
   title =        {Device-independent quantum key distribution with asymmetric
                   {CHSH} inequalities},
-  author =       {Erik Woodhead, Antonio Acín, and Stefano Pironio},
+  author =       {Woodhead, Erik and Acín, Antonio and Pironio, Stefano},
   journal =      {Quantum},
   volume =       {5},
   pages =        {443},
