--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -8,9 +8,10 @@
   pages =        {620},
   year =         {2022},
   month =        {Jan},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2007.16145},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {correlations}
 }
 
 @article{ref:pt2021,
@@ -19,9 +20,10 @@
   author =       {Pauwels, Jef and Tavakoli, Armin and Woodhead, Erik and
                   Pironio, Stefano},
   year =         {2021},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2108.00442},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {correlations}
 }
 
 @article{ref:mpw2021,
@@ -29,25 +31,27 @@
                   uncertainty relations and Pauli correlation constraints},
   author =       {Masini, Michele and Pironio, Stefano and Woodhead, Erik},
   year =         {2021},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2107.08894},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {diqkd,crypto,correlations},
 }
 
 @article{ref:mc2021,
   title =        {Resource efficient single photon source based on active
                   frequency multiplexing},
   author =       {Massar, Serge and Clemmen, Stephane},
-  journal =      {Optics Letters},
+  journal =      {Optics~Letters},
   volume =       {46},
   number =       {12},
   pages =        {2832--2835},
   doi =          {10.1364/OL.428148},
   year =         {2021},
   month =        {Jun},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2104.08491},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {photonics}
 }
 
 @article{ref:tp2021,
@@ -55,7 +59,7 @@
                   scenarios},
   author =       {Tavakoli, Armin and Pauwels, Jef and Woodhead, Erik and
                   Pironio, Stefano},
-  journal =      {PRX Quantum},
+  journal =      {PRX~Quantum},
   publisher =    {American Physical Society},
   volume =       {2},
   issue =        {4},
@@ -64,22 +68,24 @@
   doi =          {10.1103/PRXQuantum.2.040357},
   year =         {2021},
   month =        {Dec},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2103.10748},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {correlations}
 }
 
 @article{ref:ms2021,
   title =        {Characterizing the intersection of {QMA} and {coQMA}},
-  author =       {Massar, Serge and Santha,Miklos},
+  author =       {Massar, Serge and Santha, Miklos},
   journal =      {Quantum Information Processing},
   volume =       {20},
   pages =        {396},
   doi =          {10.1007/s11128-021-03326-3},
   year =         {2021},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2102.03108},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {qc}
 }
 
 @article{ref:wap2021,
@@ -92,7 +98,27 @@
   year =         {2021},
   month =        {Apr},
   doi =          {10.22331/q-2021-04-26-443},
-  archive =      {ar{X}iv},
+  archivePrefix ={ar{X}iv},
   eprint =       {2007.16146},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  topic =        {diqkd,crypto}
+}
+
+@article{ref:ab2007,
+  title =        {Device-Independent Security of Quantum Cryptography against
+                  Collective Attacks},
+  author =       {Acín, Antonio and Brunner, Nicolas and Gisin, Nicolas and
+                  Massar, Serge and Pironio, Stefano and Scarani, Valerio},
+  journal =      {Physical~Review~Letters},
+  publisher =    {American Physical Society},
+  volume =       {98},
+  issue =        {23},
+  pages =        {230501},
+  numpages =     {4},
+  year =         {2007},
+  month =        {Jun},
+  doi =          {10.1103/PhysRevLett.98.230501},
+  archivePrefix ={ar{X}iv},
+  eprint =       {quant-ph/0702152},
+  topic =        {diqkd,crypto}
 }
