lowercase domain name

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -122,3 +122,15 @@
   eprint =       {quant-ph/0702152},
   topic =        {diqkd,crypto}
 }
+
+@article{ref:s2000,
+  title =        {Quantum key distribution secure against mice},
+  author =       {Souleman, Prof},
+  journal =      {Rodent Uprising},
+  volume =       {99},
+  pages =        {9999},
+  year =         {1999},
+  archivePrefix ={vi{X}ra},
+  eprint =       {9999.9999},
+  topic =        {diqkd}
+}
