change test topic

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -132,5 +132,5 @@
   year =         {1999},
   archivePrefix ={vi{X}ra},
   eprint =       {9999.9999},
-  topic =        {diqkd}
+  topic =        {crypto}
 }
