remove version information in eprint field of refs

--- a/_bibliography/pub_pironio-liq.bib
+++ b/_bibliography/pub_pironio-liq.bib
@@ -2,7 +2,7 @@
             title = {Entanglement in prepare-and-measure scenarios: many questions, a few answers},
             author = {Jef Pauwels and Armin Tavakoli and Erik Woodhead and Stefano Pironio},
             year =  {2021},
-            eprint = {2108.00442v1}, 
+            eprint = {2108.00442}, 
             archivePrefix = {arXiv},
             primaryClass ={quant-ph}
 }
@@ -11,7 +11,7 @@
             title = {Simple and practical DIQKD security analysis via BB84-type uncertainty relations and Pauli correlation constraints},
             author = {Michele Masini and Stefano Pironio and Erik Woodhead},
             year =  {2021},
-            eprint = {2107.08894v1}, 
+            eprint = {2107.08894}, 
             archivePrefix = {arXiv},
             primaryClass ={quant-ph}
 }
@@ -28,7 +28,7 @@
 	title = {Correlations in Entanglement-Assisted Prepare-and-Measure Scenarios},
 	journal = {{PRX} Quantum},
 	pages = {040357},
-	eprint = {2103.10748v3},
+	eprint = {2103.10748},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -44,7 +44,7 @@
 	author = {Erik Woodhead and Antonio Acín and Stefano Pironio},
 	title = {Device-independent quantum key distribution with asymmetric {CHSH} inequalities},
 	journal = {Quantum},
-	eprint = {2007.16146v3},
+	eprint = {2007.16146},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -60,7 +60,7 @@
 	author = {Armin Tavakoli and Emmanuel Zambrini Cruzeiro and Erik Woodhead and Stefano Pironio},
 	title = {Informationally restricted correlations: a general framework for classical and quantum systems},
 	journal = {Quantum},
-	eprint = {2007.16145v4},
+	eprint = {2007.16145},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -69,7 +69,7 @@
             title = {Correlations and randomness generation based on energy constraints},
             author = {Thomas {Van Himbeeck} and Stefano Pironio},
             year =  {2019},
-            eprint = {1905.09117v1}, 
+            eprint = {1905.09117}, 
             archivePrefix = {arXiv},
             primaryClass ={quant-ph}
 }
@@ -86,7 +86,7 @@
 	title = {Self-testing quantum random-number generator based on an energy bound},
 	journal = {Physical Review A},
 	pages = {062338},
-	eprint = {1904.04819v2},
+	eprint = {1904.04819},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -95,7 +95,7 @@
             title = {Practical No-Signalling proof Randomness Amplification using Hardy paradoxes and its experimental implementation},
             author = {Ravishankar Ramanathan and Michał Horodecki and Hammad Anwer and Stefano Pironio and Karol Horodecki and Marcus Grünfeld and Sadiq Muhammad and Mohamed Bourennane and Paweł Horodecki},
             year =  {2018},
-            eprint = {1810.11648v3}, 
+            eprint = {1810.11648}, 
             archivePrefix = {arXiv},
             primaryClass ={quant-ph}
 }
@@ -112,7 +112,7 @@
 	title = {Quantifying the randomness of copies of noisy Popescu-Rohrlich correlations},
 	journal = {Physical Review A},
 	pages = {042130},
-	eprint = {1807.04674v3},
+	eprint = {1807.04674},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -128,7 +128,7 @@
 	author = {Ravishankar Ramanathan and Monika Rosicka and Karol Horodecki and Stefano Pironio and Michał Horodecki and Paweł Horodecki},
 	title = {Gadget structures in proofs of the Kochen-Specker theorem},
 	journal = {Quantum},
-	eprint = {1807.00113v2},
+	eprint = {1807.00113},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -144,7 +144,7 @@
 	author = {Thomas {Van Himbeeck} and Jonatan Bohr Brask and Stefano Pironio and Ravishankar Ramanathan and Ana Belén Sainz and Elie Wolfe},
 	title = {Quantum violations in the Instrumental scenario and their relations to the Bell scenario},
 	journal = {Quantum},
-	eprint = {1804.04119v4},
+	eprint = {1804.04119},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -160,7 +160,7 @@
 	author = {Cédric Bamps and Serge Massar and Stefano Pironio},
 	title = {Device-independent randomness generation with sublinear shared quantum resources},
 	journal = {Quantum},
-	eprint = {1704.02130v3},
+	eprint = {1704.02130},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -176,7 +176,7 @@
 	author = {Thomas {Van Himbeeck} and Erik Woodhead and Nicolas J. Cerf and Raúl García-Patrón and Stefano Pironio},
 	title = {Semi-device-independent framework based on natural physical assumptions},
 	journal = {Quantum},
-	eprint = {1612.06828v3},
+	eprint = {1612.06828},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -193,7 +193,7 @@
 	author = {Olmo Nieto-Silleras and Cédric Bamps and Jonathan Silman and Stefano Pironio},
 	title = {Device-independent randomness generation from several Bell estimators},
 	journal = {New Journal of Physics},
-	eprint = {1611.00352v4},
+	eprint = {1611.00352},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -210,7 +210,7 @@
 	title = {Bell Inequalities Tailored to Maximally Entangled States},
 	journal = {Physical Review Letters},
 	pages = {040402},
-	eprint = {1607.04578v2},
+	eprint = {1607.04578},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -227,7 +227,7 @@
 	author = {N Aharon and S Massar and S Pironio and J Silman},
 	title = {Device-independent bit commitment based on the {CHSH} inequality},
 	journal = {New Journal of Physics},
-	eprint = {1511.06283v1},
+	eprint = {1511.06283},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -236,7 +236,7 @@
             title = {Random choices and the locality loophole},
             author = {Stefano Pironio},
             year =  {2015},
-            eprint = {1510.00248v1}, 
+            eprint = {1510.00248}, 
             archivePrefix = {arXiv},
             primaryClass ={quant-ph}
 }
@@ -253,7 +253,7 @@
 	title = {Secrecy in Prepare-and-Measure Clauser-Horne-Shimony-Holt Tests with a Qubit Bound},
 	journal = {Physical Review Letters},
 	pages = {150501},
-	eprint = {1507.02889v2},
+	eprint = {1507.02889},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -270,7 +270,7 @@
 	author = {Le Phuc Thinh and Gonzalo de la Torre and Jean-Daniel Bancal and Stefano Pironio and Valerio Scarani},
 	title = {Randomness in post-selected events},
 	journal = {New Journal of Physics},
-	eprint = {1506.03953v3},
+	eprint = {1506.03953},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -287,7 +287,7 @@
 	title = {Optimal randomness certification from one entangled bit},
 	journal = {Physical Review A},
 	pages = {040102},
-	eprint = {1505.03837v1},
+	eprint = {1505.03837},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -304,7 +304,7 @@
 	title = {Necessary detection efficiencies for secure quantum key distribution and bound randomness},
 	journal = {Physical Review A},
 	pages = {012319},
-	eprint = {1505.00053v2},
+	eprint = {1505.00053},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -321,7 +321,7 @@
 	title = {Sum-of-squares decompositions for a family of Clauser-Horne-Shimony-Holt-like inequalities and their application to self-testing},
 	journal = {Physical Review A},
 	pages = {052111},
-	eprint = {1504.06960v1},
+	eprint = {1504.06960},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -338,7 +338,7 @@
 	author = {Serge Massar and Stefano Pironio and Damián Pitalúa-García},
 	title = {Hyperdense coding and superadditivity of classical capacities in hypersphere theories},
 	journal = {New Journal of Physics},
-	eprint = {1504.05147v2},
+	eprint = {1504.05147},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -355,7 +355,7 @@
 	author = {Stefano Pironio},
 	title = {All Clauser-Horne-Shimony-Holt polytopes},
 	journal = {Journal of Physics A: Mathematical and Theoretical},
-	eprint = {1402.6914v2},
+	eprint = {1402.6914},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -372,7 +372,7 @@
 	author = {O Nieto-Silleras and S Pironio and J Silman},
 	title = {Using complete measurement statistics for optimal device-independent randomness evaluation},
 	journal = {New Journal of Physics},
-	eprint = {1309.3930v4},
+	eprint = {1309.3930},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -389,7 +389,7 @@
 	title = {Experimental refutation of a class of ψ-epistemic models},
 	journal = {Physical Review A},
 	pages = {032112},
-	eprint = {1306.0414v2},
+	eprint = {1306.0414},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -406,7 +406,7 @@
 	author = {Nicolas Brunner and Daniel Cavalcanti and Stefano Pironio and Valerio Scarani and Stephanie Wehner},
 	title = {Bell nonlocality},
 	journal = {Reviews of Modern Physics},
-	eprint = {1303.2849v3},
+	eprint = {1303.2849},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -423,7 +423,7 @@
 	title = {Device-Independent Randomness Generation in the Presence of Weak Cross-Talk},
 	journal = {Physical Review Letters},
 	pages = {100504},
-	eprint = {1211.5921v1},
+	eprint = {1211.5921},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -440,7 +440,7 @@
 	title = {Security of Device-Independent Quantum Key Distribution in the Bounded-Quantum-Storage Model},
 	journal = {Physical Review X},
 	pages = {031007},
-	eprint = {1211.1402v2},
+	eprint = {1211.1402},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -457,7 +457,7 @@
 	title = {No-Go Theorems for ψ-Epistemic Models Based on a Continuity Assumption},
 	journal = {Physical Review Letters},
 	pages = {090402},
-	eprint = {1211.1179v3},
+	eprint = {1211.1179},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -474,7 +474,7 @@
 	title = {Effects of preparation and measurement misalignments on the security of the Bennett-Brassard 1984 quantum-key-distribution protocol},
 	journal = {Physical Review A},
 	pages = {032315},
-	eprint = {1209.6479v4},
+	eprint = {1209.6479},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -491,7 +491,7 @@
 	author = {M Navascués and A García-Sáez and A Acín and S Pironio and M B Plenio},
 	title = {A paradox in bosonic energy computations via semidefinite programming relaxations},
 	journal = {New Journal of Physics},
-	eprint = {1203.3777v2},
+	eprint = {1203.3777},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -508,7 +508,7 @@
 	title = {Bilocal versus nonbilocal correlations in entanglement-swapping experiments},
 	journal = {Physical Review A},
 	pages = {032119},
-	eprint = {1112.4502v1},
+	eprint = {1112.4502},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -525,7 +525,7 @@
 	title = {Definitions of multipartite nonlocality},
 	journal = {Physical Review A},
 	pages = {014102},
-	eprint = {1112.2626v2},
+	eprint = {1112.2626},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -542,7 +542,7 @@
 	title = {Security of practical private randomness generation},
 	journal = {Physical Review A},
 	pages = {012336},
-	eprint = {1111.6056v5},
+	eprint = {1111.6056},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -559,7 +559,7 @@
 	author = {J-D. Bancal and S. Pironio and A. Acín and Y-C. Liang and V. Scarani and N. Gisin},
 	title = {Quantum non-locality based on finite-speed causal influences leads to superluminal signalling},
 	journal = {Nature Physics},
-	eprint = {1110.3795v2},
+	eprint = {1110.3795},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -576,7 +576,7 @@
 	title = {Randomness versus Nonlocality and Entanglement},
 	journal = {Physical Review Letters},
 	pages = {100402},
-	eprint = {1107.2754v1},
+	eprint = {1107.2754},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -593,7 +593,7 @@
 	title = {Device-Independent Witnesses of Genuine Multipartite Entanglement},
 	journal = {Physical Review Letters},
 	pages = {250404},
-	eprint = {1102.0197v2},
+	eprint = {1102.0197},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -610,7 +610,7 @@
 	title = {Fully Distrustful Quantum Bit Commitment and Coin Flipping},
 	journal = {Physical Review Letters},
 	pages = {220501},
-	eprint = {1101.5086v2},
+	eprint = {1101.5086},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -627,7 +627,7 @@
 	author = {Stefano Pironio and Jean-Daniel Bancal and Valerio Scarani},
 	title = {Extremal correlations of the tripartite no-signaling polytope},
 	journal = {Journal of Physics A: Mathematical and Theoretical},
-	eprint = {1101.2477v2},
+	eprint = {1101.2477},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -644,7 +644,7 @@
 	title = {Secure device-independent quantum key distribution with causally independent measurement devices},
 	journal = {Nature Communications},
 	pages = {1038/ncomms1244},
-	eprint = {1009.1567v2},
+	eprint = {1009.1567},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -661,7 +661,7 @@
 	author = {Jean-Daniel Bancal and Nicolas Gisin and Stefano Pironio},
 	title = {Looking for symmetric Bell inequalities},
 	journal = {Journal of Physics A: Mathematical and Theoretical},
-	eprint = {1004.4146v3},
+	eprint = {1004.4146},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -678,7 +678,7 @@
 	title = {Guess Your Neighbor's Input: A Multipartite Nonlocal Game with No Quantum Advantage},
 	journal = {Physical Review Letters},
 	pages = {230404},
-	eprint = {1003.3844v1},
+	eprint = {1003.3844},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -695,7 +695,7 @@
 	title = {Proposal for Implementing Device-Independent Quantum Key Distribution Based on a Heralded Qubit Amplifier},
 	journal = {Physical Review Letters},
 	pages = {070501},
-	eprint = {1003.0635v2},
+	eprint = {1003.0635},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -712,7 +712,7 @@
 	author = {S. Pironio and A. Acín and S. Massar and A. Boyer de la Giroday and D. N. Matsukevich and P. Maunz and S. Olmschenk and D. Hayes and L. Luo and T. A. Manning and C. Monroe},
 	title = {Random numbers certified by Bell's theorem},
 	journal = {Nature},
-	eprint = {0911.3427v3},
+	eprint = {0911.3427},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -729,7 +729,7 @@
 	title = {Characterizing the Nonlocal Correlations Created via Entanglement Swapping},
 	journal = {Physical Review Letters},
 	pages = {170401},
-	eprint = {0911.1314v1},
+	eprint = {0911.1314},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -747,7 +747,7 @@
 	author = {Stefano Pironio and Antonio Acín and Nicolas Brunner and Nicolas Gisin and Serge Massar and Valerio Scarani},
 	title = {Device-independent quantum key distribution secure against collective attacks},
 	journal = {New Journal of Physics},
-	eprint = {0903.4460v1},
+	eprint = {0903.4460},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -764,7 +764,7 @@
 	author = {S. Pironio and M. Navascués and A. Acín},
 	title = {Convergent Relaxations of Polynomial Optimization Problems with Noncommuting Variables},
 	journal = {{SIAM} Journal on Optimization},
-	eprint = {0903.4368v2},
+	eprint = {0903.4368},
 	archivePrefix = {arXiv},
 	primaryClass ={math.OC}
 }
@@ -783,7 +783,7 @@
 	title = {Device-Independent Security of Quantum Cryptography against Collective Attacks},
 	journal = {Physical Review Letters},
 	pages = {230501},
-	eprint = {quant-ph/0702152v2},
+	eprint = {quant-ph/0702152},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -801,7 +801,7 @@
 	author = {Antonio Acín and Serge Massar and Stefano Pironio},
 	title = {Efficient quantum key distribution secure against no-signalling eavesdroppers},
 	journal = {New Journal of Physics},
-	eprint = {quant-ph/0605246v2},
+	eprint = {quant-ph/0605246},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -819,7 +819,7 @@
 	title = {Nonlocal correlations as an information-theoretic resource},
 	journal = {Physical Review A},
 	pages = {022101},
-	eprint = {quant-ph/0404097v1},
+	eprint = {quant-ph/0404097},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -836,7 +836,7 @@
 	title = {Violations of Bell inequalities as lower bounds on the communication cost of nonlocal correlations},
 	journal = {Physical Review A},
 	pages = {062102},
-	eprint = {quant-ph/0304176v1},
+	eprint = {quant-ph/0304176},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -853,7 +853,7 @@
 	title = {Violation of local realism versus detection efficiency},
 	journal = {Physical Review A},
 	pages = {062109},
-	eprint = {quant-ph/0210103v2},
+	eprint = {quant-ph/0210103},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -870,7 +870,7 @@
 	title = {Bell inequalities resistant to detector inefficiency},
 	journal = {Physical Review A},
 	pages = {052112},
-	eprint = {quant-ph/0205130v2},
+	eprint = {quant-ph/0205130},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -882,7 +882,7 @@
   	pages={105--109},
   	year={2003},
   	publisher={Springer},
-   	eprint = {quant-ph/0205102v1}, 
+   	eprint = {quant-ph/0205102}, 
     archivePrefix = {arXiv},
     primaryClass ={quant-ph}
 }
@@ -900,7 +900,7 @@
 	title = {Greenberger-Horne-Zeilinger Paradoxes for Many Qudits},
 	journal = {Physical Review Letters},
 	pages = {080402},
-	eprint = {quant-ph/0107031v1},
+	eprint = {quant-ph/0107031},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -917,7 +917,7 @@
 	title = {Minimum number of photons needed to distinguish two transparencies},
 	journal = {Physical Review A},
 	pages = {022110},
-	eprint = {quant-ph/0105098v1},
+	eprint = {quant-ph/0105098},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -934,7 +934,7 @@
 	title = {Greenberger-Horne-Zeilinger paradox for continuous variables},
 	journal = {Physical Review A},
 	pages = {062108},
-	eprint = {quant-ph/0103048v1},
+	eprint = {quant-ph/0103048},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
@@ -951,7 +951,7 @@
 	title = {Minimal absorption measurements},
 	journal = {Physical Review A},
 	pages = {062303},
-	eprint = {quant-ph/0102116v1},
+	eprint = {quant-ph/0102116},
 	archivePrefix = {arXiv},
 	primaryClass ={quant-ph}
 }
