--- a/_bibliography/pub_pironio-liq.bib
+++ b/_bibliography/pub_pironio-liq.bib
@@ -972,5 +972,6 @@
   booktitle={Conference on Quantum Computation, Communication, and Cryptography},
   pages={107--115},
   year={2012},
-  organization={Springer}
+  organization={Springer},
+  doi={10.1007/978-3-642-35656-8_9}
 }
