add pubs for Stephane Clemmen

--- a/_bibliography/pironio_s_liq.bib
+++ b/_bibliography/pironio_s_liq.bib
@@ -133,7 +133,7 @@
 @article{Van_Himbeeck_2019,
   title =        {Quantum violations in the Instrumental scenario and their
                   relations to the Bell scenario},
-  author =       {Van Himbeeck, Thomas and Bohr Brask, Jonatan and Pironio,
+  author =       {Van Himbeeck, Thomas and Brask, Jonatan Bohr and Pironio,
                   Stefano and Ramanathan, Ravishankar and Sainz, Ana Belén and
                   Wolfe, Elie},
   journal =      {Quantum},
