add pubs for some present and past members

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -488,7 +488,7 @@
   title =        {Silicon-on-insulator integrated source of
                   polarization-entangled photons},
   author =       {Olislager, Laurent and Safioui, Jassem and Clemmen, Stéphane
-                  and Huy, Kien Phan and Bogaerts, Wim and Baets, Roel and
+                  and Phan Huy, Kien and Bogaerts, Wim and Baets, Roel and
                   Emplit, Philippe and Massar, Serge},
   journal =      {Optics Letters},
   publisher =    {The Optical Society},
@@ -631,7 +631,7 @@
                   with electro-optic phase modulators},
   author =       {Olislager, Laurent and Mbodji, Ismaël and Woodhead, Erik and
                   Cussey, Johann and Furfaro, Luca and Emplit, Philippe and
-                  Massar, Serge and Huy, Kien Phan and Merolla, Jean-Marc},
+                  Massar, Serge and Phan Huy, Kien and Merolla, Jean-Marc},
   journal =      {New Journal of Physics},
   publisher =    {IOP Publishing},
   volume =       {14},
@@ -778,7 +778,7 @@
 @article{Olislager_2010,
   title =        {Frequency-bin entangled photons},
   author =       {Olislager, L. and Cussey, J. and Nguyen, A. T. and Emplit,
-                  P. and Massar, S. and Merolla, J.-M. and Huy, K. Phan},
+                  P. and Massar, S. and Merolla, J.-M. and Phan Huy, K.},
   journal =      {Physical Review A},
   publisher =    {American Physical Society (APS)},
   volume =       {82},
@@ -872,7 +872,7 @@
 @article{Clemmen_2009,
   title =        {Continuous wave photon pair generation in
                   silicon-on-insulator waveguides and ring resonators},
-  author =       {Clemmen, S. and Huy, K. Phan and Bogaerts, W. and Baets, R.
+  author =       {Clemmen, S. and Phan Huy, K. and Bogaerts, W. and Baets, R.
                   G. and Emplit, Ph. and Massar, S.},
   journal =      {Optics Express},
   publisher =    {The Optical Society},
