add bibentry for Stefano + bugfix in bibutils

--- a/_bibliography/pironio_s_liq.bib
+++ b/_bibliography/pironio_s_liq.bib
@@ -819,7 +819,7 @@
 }
 
 @article{Almeida_2010,
-  title =        {Guess Your Neighbor’s Input: A Multipartite Nonlocal Game
+  title =        {Guess Your Neighbor's Input: A Multipartite Nonlocal Game
                   with No Quantum Advantage},
   author =       {Almeida, Mafalda L. and Bancal, Jean-Daniel and Brunner,
                   Nicolas and Acín, Antonio and Gisin, Nicolas and Pironio,
@@ -839,7 +839,7 @@
 }
 
 @article{Pironio_2010,
-  title =        {Random numbers certified by Bell’s theorem},
+  title =        {Random numbers certified by Bell's theorem},
   author =       {Pironio, S. and Acín, A. and Massar, S. and de la Giroday,
                   A. Boyer and Matsukevich, D. N. and Maunz, P. and Olmschenk,
                   S. and Hayes, D. and Luo, L. and Manning, T. A. and Monroe,
@@ -874,4 +874,22 @@
   archivePrefix ={ar{X}iv},
   eprint =       {0911.1314},
   primaryClass = {quant-ph}
+}
+
+@article{Pironio_2010,
+  title =        {Convergent Relaxations of Polynomial Optimization Problems
+                  with Noncommuting Variables},
+  author =       {Pironio, S. and Navascués, M. and Acín, A.},
+  journal =      {SIAM Journal on Optimization},
+  publisher =    {Society for Industrial & Applied Mathematics (SIAM)},
+  volume =       {20},
+  number =       {5},
+  pages =        {2157–2180},
+  year =         {2010},
+  month =        {Jan},
+  doi =          {10.1137/090760155},
+  issn =         {1095-7189},
+  archivePrefix ={ar{X}iv},
+  eprint =       {0903.4368},
+  primaryClass = {math.OC}
 }
