tag Stefanos papers

--- a/_bibliography/duncan_r_liq.bib
+++ b/_bibliography/duncan_r_liq.bib
@@ -15,7 +15,8 @@
   issn =         {2075-2180},
   archivePrefix ={ar{X}iv},
   eprint =       {1307.7048},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @inproceedings{Duncan_2014,
@@ -35,7 +36,8 @@
   issn =         {2075-2180},
   archivePrefix ={ar{X}iv},
   eprint =       {1306.4532},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @inproceedings{Coecke_2012,
@@ -51,7 +53,8 @@
   doi =          {10.1109/LICS.2012.35},
   archivePrefix ={ar{X}iv},
   eprint =       {1203.4988},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Duncan_2012,
@@ -62,7 +65,8 @@
   day =          {28},
   archivePrefix ={ar{X}iv},
   eprint =       {1203.6242},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Coecke_2011,
@@ -80,5 +84,6 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {0906.4725},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
