--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -133,7 +133,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {1704.02130},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Antonik_2018,
@@ -283,7 +284,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1511.06283},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Massar_2015,
@@ -302,7 +304,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1504.05147},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Massar_2015,
@@ -463,7 +466,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1306.0414},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Patra_2013,
@@ -481,7 +485,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1211.1179},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Olislager_2013,
@@ -536,7 +541,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1211.5921},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2013,
@@ -553,7 +559,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1111.6056},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Smerieri_2012,
@@ -660,7 +667,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1107.2754},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Paquot_2012,
@@ -713,7 +721,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.5086},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Kuyken_2011,
@@ -810,7 +819,8 @@
   issn =         {1476-4687},
   archivePrefix ={ar{X}iv},
   eprint =       {0911.3427},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Buhrman_2010,
@@ -904,7 +914,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {0903.4460},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Nguyen_2008,
@@ -1010,7 +1021,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0702152},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Massar_2006,
@@ -1046,7 +1058,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0605246},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Buhrman_2006,
