--- a/_bibliography/woodhead_e_liq.bib
+++ b/_bibliography/woodhead_e_liq.bib
@@ -13,7 +13,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1405.5625},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Woodhead_2013,
@@ -31,5 +32,6 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1303.4821},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
