--- a/_bibliography/pironio_s_liq.bib
+++ b/_bibliography/pironio_s_liq.bib
@@ -7,7 +7,8 @@
   day =          {10},
   archivePrefix ={ar{X}iv},
   eprint =       {2203.05372},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Tavakoli_2022,
@@ -26,7 +27,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {2007.16145},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Tavakoli_2021,
@@ -45,7 +47,8 @@
   issn =         {2691-3399},
   archivePrefix ={ar{X}iv},
   eprint =       {2103.10748},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pauwels_2021,
@@ -58,7 +61,8 @@
   day =          {1},
   archivePrefix ={ar{X}iv},
   eprint =       {2108.00442},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Masini_2021,
@@ -70,7 +74,8 @@
   day =          {19},
   archivePrefix ={ar{X}iv},
   eprint =       {2107.08894},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Woodhead_2021,
@@ -88,7 +93,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {2007.16146},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Ramanathan_2020,
@@ -107,7 +113,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {1807.00113},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Rusca_2019,
@@ -127,7 +134,8 @@
   issn =         {2469-9934},
   archivePrefix ={ar{X}iv},
   eprint =       {1904.04819},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Van_Himbeeck_2019,
@@ -147,7 +155,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {1804.04119},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Van_Himbeeck_2019,
@@ -159,7 +168,8 @@
   day =          {22},
   archivePrefix ={ar{X}iv},
   eprint =       {1905.09117},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Ramanathan_2018,
@@ -174,7 +184,8 @@
   day =          {27},
   archivePrefix ={ar{X}iv},
   eprint =       {1810.11648},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Bourdoncle_2018,
@@ -192,7 +203,8 @@
   issn =         {2469-9934},
   archivePrefix ={ar{X}iv},
   eprint =       {1807.04674},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Bamps_2018,
@@ -210,7 +222,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {1704.02130},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Nieto-Silleras_2018,
@@ -229,7 +242,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1611.00352},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Van_Himbeeck_2017,
@@ -248,7 +262,8 @@
   issn =         {2521-327X},
   archivePrefix ={ar{X}iv},
   eprint =       {1612.06828},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Salavrakos_2017,
@@ -266,7 +281,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1607.04578},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Acin_2016,
@@ -284,7 +300,8 @@
   issn =         {2469-9934},
   archivePrefix ={ar{X}iv},
   eprint =       {1505.03837},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Thinh_2016,
@@ -302,7 +319,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1506.03953},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Aharon_2016,
@@ -320,7 +338,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1511.06283},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Acin_2016,
@@ -339,7 +358,8 @@
   issn =         {2469-9934},
   archivePrefix ={ar{X}iv},
   eprint =       {1505.00053},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Woodhead_2015,
@@ -357,7 +377,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1507.02889},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2015,
@@ -368,7 +389,8 @@
   day =          {1},
   archivePrefix ={ar{X}iv},
   eprint =       {1510.00248},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Massar_2015,
@@ -387,7 +409,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1504.05147},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Bamps_2015,
@@ -406,7 +429,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1504.06960},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2014,
@@ -423,7 +447,8 @@
   issn =         {1751-8121},
   archivePrefix ={ar{X}iv},
   eprint =       {1402.6914},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Brunner_2014,
@@ -441,7 +466,8 @@
   issn =         {1539-0756},
   archivePrefix ={ar{X}iv},
   eprint =       {1303.2849},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Nieto-Silleras_2014,
@@ -459,7 +485,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1309.3930},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Patra_2013,
@@ -477,7 +504,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1306.0414},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2013,
@@ -495,7 +523,8 @@
   issn =         {2160-3308},
   archivePrefix ={ar{X}iv},
   eprint =       {1211.1402},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Patra_2013,
@@ -513,7 +542,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1211.1179},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Bancal_2013,
@@ -531,7 +561,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1112.2626},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Woodhead_2013,
@@ -550,7 +581,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1209.6479},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Silman_2013,
@@ -568,7 +600,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1211.5921},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Navascues_2013,
@@ -587,7 +620,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1203.3777},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2013,
@@ -604,20 +638,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1111.6056},
-  primaryClass = {quant-ph}
-}
-
-@article{Woodhead_2013,
-  title =        {Semi-device-independent QKD Based on BB84 and a CHSH-Type
-                  Estimation},
-  author =       {Woodhead, Erik and Lim, Charles Ci Wen and Pironio, Stefano},
-  journal =      {Lecture Notes in Computer Science},
-  publisher =    {Springer Berlin Heidelberg},
-  pages =        {107–115},
-  year =         {2013},
-  doi =          {10.1007/978-3-642-35656-8_9},
-  isbn =         {9783642356568},
-  issn =         {1611-3349}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @incollection{Woodhead_2013,
@@ -634,7 +656,8 @@
   volume =	 {7582},
   pages =	 {107--115},
   doi =		 {10.1007/978-3-642-35656-8_9},
-  isbn =	 {978-3-642-35655-1}
+  isbn =	 {978-3-642-35655-1},
+  tag =          {qinfo}
 }
 
 @article{Bancal_2012,
@@ -653,7 +676,8 @@
   issn =         {1745-2481},
   archivePrefix ={ar{X}iv},
   eprint =       {1110.3795},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Branciard_2012,
@@ -672,7 +696,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1112.4502},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Acin_2012,
@@ -689,7 +714,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1107.2754},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @incollection{Navascues_2012,
@@ -706,7 +732,8 @@
   volume =	 {166},
   pages =	 {601--634},
   doi =		 {10.1007/978-1-4614-0769-0_21},
-  isbn =	 {978-1-4614-0768-3}
+  isbn =	 {978-1-4614-0768-3},
+  tag =          {qinfo}
 }
 
 @article{Silman_2011,
@@ -724,7 +751,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.5086},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Bancal_2011,
@@ -743,7 +771,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1102.0197},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Masanes_2011,
@@ -761,7 +790,8 @@
   issn =         {2041-1723},
   archivePrefix ={ar{X}iv},
   eprint =       {1009.1567},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2011,
@@ -780,7 +810,8 @@
   issn =         {1751-8121},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.2477},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Gisin_2010,
@@ -798,7 +829,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1003.0635},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Bancal_2010,
@@ -815,7 +847,8 @@
   issn =         {1751-8121},
   archivePrefix ={ar{X}iv},
   eprint =       {1004.4146},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Almeida_2010,
@@ -835,7 +868,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {1003.3844},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2010,
@@ -855,7 +889,8 @@
   issn =         {1476-4687},
   archivePrefix ={ar{X}iv},
   eprint =       {0911.3427},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Branciard_2010,
@@ -873,7 +908,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {0911.1314},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Pironio_2010,
@@ -891,5 +927,6 @@
   issn =         {1095-7189},
   archivePrefix ={ar{X}iv},
   eprint =       {0903.4368},
-  primaryClass = {math.OC}
+  primaryClass = {math.OC},
+  tag =          {qinfo}
 }
