add untagged pubs page and tag Stephane Clemmens papers as optics

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -48,7 +48,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {2104.08491},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Massar_2021,
@@ -506,7 +507,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1304.0642},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Massar_2013,
@@ -610,7 +612,8 @@
   issn =         {1520-8540},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.5841},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Zhang_2012,
@@ -744,7 +747,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1102.1026},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Aharon_2010,
@@ -781,7 +785,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1102.1030},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Olislager_2010,
@@ -895,7 +900,8 @@
   issn =         {1094-4087},
   archivePrefix ={ar{X}iv},
   eprint =       {0906.4688},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Pironio_2009,
@@ -984,7 +990,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {0705.1274},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Massar_2007,
