--- a/_bibliography/clemmen_s_liq.bib
+++ b/_bibliography/clemmen_s_liq.bib
@@ -13,7 +13,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {2104.08491},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Reynkens_2021,
@@ -30,7 +31,8 @@
   year =         {2021},
   month =        {Feb},
   doi =          {10.1364/ol.418527},
-  issn =         {1539-4794}
+  issn =         {1539-4794},
+  tag =          {optics}
 }
 
 @article{Reynkens_2020,
@@ -47,7 +49,8 @@
   year =         {2020},
   month =        {Oct},
   doi =          {10.1364/oe.408638},
-  issn =         {1094-4087}
+  issn =         {1094-4087},
+  tag =          {optics}
 }
 
 @article{Li_2020,
@@ -63,7 +66,8 @@
   year =         {2020},
   month =        {Feb},
   doi =          {10.1109/jqe.2019.2946839},
-  issn =         {1558-1713}
+  issn =         {1558-1713},
+  tag =          {optics}
 }
 
 @article{Van_Daele_2019,
@@ -82,7 +86,8 @@
   year =         {2019},
   month =        {Sep},
   doi =          {10.1149/ma2019-02/24/1156},
-  issn =         {2151-2043}
+  issn =         {2151-2043},
+  tag =          {optics}
 }
 
 @article{Van_Daele_2019,
@@ -101,7 +106,8 @@
   year =         {2019},
   month =        {Sep},
   doi =          {10.1021/acsami.9b10848},
-  issn =         {1944-8252}
+  issn =         {1944-8252},
+  tag =          {optics}
 }
 
 @article{Raza_2019,
@@ -120,7 +126,8 @@
   year =         {2019},
   month =        {Jul},
   doi =          {10.1364/oe.27.023067},
-  issn =         {1094-4087}
+  issn =         {1094-4087},
+  tag =          {optics}
 }
 
 @article{Losada_2019,
@@ -137,7 +144,8 @@
   year =         {2019},
   month =        {May},
   doi =          {10.1109/jstqe.2019.2896200},
-  issn =         {1558-4542}
+  issn =         {1558-4542},
+  tag =          {optics}
 }
 
 @article{Hermans_2019,
@@ -154,7 +162,8 @@
   year =         {2019},
   month =        {Feb},
   doi =          {10.1364/ol.44.001112},
-  issn =         {1539-4794}
+  issn =         {1539-4794},
+  tag =          {optics}
 }
 
 @article{Raza_2018,
@@ -172,7 +181,8 @@
   year =         {2018},
   month =        {Nov},
   doi =          {10.1063/1.5048266},
-  issn =         {2378-0967}
+  issn =         {2378-0967},
+  tag =          {optics}
 }
 
 @article{Clemmen_2018,
@@ -187,7 +197,8 @@
   year =         {2018},
   month =        {Apr},
   doi =          {10.1364/ol.43.002138},
-  issn =         {1539-4794}
+  issn =         {1539-4794},
+  tag =          {optics}
 }
 
 @article{Joshi_2018,
@@ -206,7 +217,8 @@
   issn =         {2041-1723},
   archivePrefix ={ar{X}iv},
   eprint =       {1707.00048},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Clemmen_2012,
@@ -226,7 +238,8 @@
   issn =         {1520-8540},
   archivePrefix ={ar{X}iv},
   eprint =       {1101.5841},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Kuyken_2011,
@@ -248,7 +261,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1102.1026},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Clemmen_2010,
@@ -268,7 +282,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {1102.1030},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Clemmen_2009,
@@ -287,7 +302,8 @@
   issn =         {1094-4087},
   archivePrefix ={ar{X}iv},
   eprint =       {0906.4688},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics}
 }
 
 @article{Brainis_2007,
@@ -305,5 +321,6 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {0705.1274},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
