Fred, Damian, and Manas papers -> qinfo

--- a/_bibliography/ezerman_f_liq.bib
+++ b/_bibliography/ezerman_f_liq.bib
@@ -13,5 +13,6 @@
   issn =         {1557-9654},
   archivePrefix ={ar{X}iv},
   eprint =       {1207.6512},
-  primaryClass = {cs.IT}
+  primaryClass = {cs.IT},
+  tag =          {qinfo}
 }
