--- a/_bibliography/patra_m_k_liq.bib
+++ b/_bibliography/patra_m_k_liq.bib
@@ -12,5 +12,6 @@
   issn =         {1751-8121},
   archivePrefix ={ar{X}iv},
   eprint =       {1109.1763},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
