--- a/_bibliography/pitalua-garcia_d_liq.bib
+++ b/_bibliography/pitalua-garcia_d_liq.bib
@@ -12,5 +12,6 @@
   issn =         {2469-9934},
   archivePrefix ={ar{X}iv},
   eprint =       {1512.05649},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
