tag some of Serge\'s papers

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -12,7 +12,8 @@
   issn =         {1573-1332},
   archivePrefix ={ar{X}iv},
   eprint =       {2102.03108},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Lupo_2021,
@@ -66,7 +67,8 @@
   issn =         {1573-1332},
   archivePrefix ={ar{X}iv},
   eprint =       {1805.00670},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Butschek_2020,
@@ -79,7 +81,8 @@
   day =          {25},
   archivePrefix ={ar{X}iv},
   eprint =       {2008.11247},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Pauwels_2019,
@@ -97,7 +100,8 @@
   issn =         {2296-424X},
   archivePrefix ={ar{X}iv},
   eprint =       {1908.11210},
-  primaryClass = {physics.app-ph}
+  primaryClass = {physics.app-ph},
+  tag =          {optics}
 }
 
 @article{Robertson_2019,
@@ -116,7 +120,8 @@
   issn =         {2469-9934},
   archivePrefix ={ar{X}iv},
   eprint =       {1902.04352},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Bamps_2018,
@@ -154,7 +159,8 @@
   issn =         {2470-0053},
   archivePrefix ={ar{X}iv},
   eprint =       {1802.02844},
-  primaryClass = {cs.NE}
+  primaryClass = {cs.NE},
+  tag =          {comput}
 }
 
 @article{Antonik_2017,
@@ -592,7 +598,7 @@
   issn =         {1094-4087},
   archivePrefix ={ar{X}iv},
   eprint =       {1207.1619},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
 }
 
 @article{Clemmen_2012,
@@ -706,7 +712,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1106.0405},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Silman_2011,
@@ -765,7 +772,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {1006.1121},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Clemmen_2010,
@@ -843,7 +851,8 @@
   issn =         {1539-0756},
   archivePrefix ={ar{X}iv},
   eprint =       {0907.3584},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{van_der_Gulik_2009,
@@ -866,7 +875,7 @@
 }
 
 @article{Bardyn_2009,
-  title =        {Device-independent state estimation based on Bell’s
+  title =        {Device-independent state estimation based on Bell's
                   inequalities},
   author =       {Bardyn, C.-E. and Liew, T. C. H. and Massar, S. and McKague,
                   M. and Scarani, V.},
@@ -881,7 +890,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {0907.2170},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Clemmen_2009,
@@ -972,7 +982,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0703036},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Brainis_2007,
@@ -1009,7 +1020,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {physics/0606028},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Acin_2007,
@@ -1102,11 +1114,12 @@
   issn =         {1550-2376},
   archivePrefix ={ar{X}iv},
   eprint =       {physics/0507189},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Buhrman_2005,
-  title =        {Causality and Tsirelson’s bounds},
+  title =        {Causality and Tsirelson's bounds},
   author =       {Buhrman, H. and Massar, S.},
   journal =      {Physical Review A},
   publisher =    {American Physical Society (APS)},
@@ -1119,7 +1132,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0409066},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Popescu_2005,
@@ -1137,7 +1151,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0407035},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Ivanyos_2005,
@@ -1228,7 +1243,8 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0410027},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Amans_2005,
@@ -1248,7 +1264,8 @@
   issn =         {1539-4794},
   archivePrefix ={ar{X}iv},
   eprint =       {physics/0502130},
-  primaryClass = {physics.optics}
+  primaryClass = {physics.optics},
+  tag =          {optics}
 }
 
 @article{Massar_2005,
@@ -1283,7 +1300,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0407018},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
 
 @article{Lamoureux_2005,
@@ -1301,5 +1319,6 @@
   issn =         {1079-7114},
   archivePrefix ={ar{X}iv},
   eprint =       {quant-ph/0408121},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {qinfo}
 }
