allow multiple tags to share a topic title

--- a/_bibliography/massar_s_liq.bib
+++ b/_bibliography/massar_s_liq.bib
@@ -31,7 +31,8 @@
   issn =         {1094-4087},
   archivePrefix ={ar{X}iv},
   eprint =       {2107.04585},
-  primaryClass = {cs.ET}
+  primaryClass = {cs.ET},
+  tag =          {neuro,optics}
 }
 
 @article{Massar_2021,
@@ -101,7 +102,7 @@
   archivePrefix ={ar{X}iv},
   eprint =       {1908.11210},
   primaryClass = {physics.app-ph},
-  tag =          {optics}
+  tag =          {neuro,optics}
 }
 
 @article{Robertson_2019,
@@ -160,7 +161,7 @@
   archivePrefix ={ar{X}iv},
   eprint =       {1802.02844},
   primaryClass = {cs.NE},
-  tag =          {comput}
+  tag =          {neuro}
 }
 
 @article{Antonik_2017,
@@ -659,7 +660,8 @@
   issn =         {1367-2630},
   archivePrefix ={ar{X}iv},
   eprint =       {1107.5519},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics,qinfo}
 }
 
 @article{Acin_2012,
@@ -812,7 +814,8 @@
   issn =         {1094-1622},
   archivePrefix ={ar{X}iv},
   eprint =       {0910.1325},
-  primaryClass = {quant-ph}
+  primaryClass = {quant-ph},
+  tag =          {optics,qinfo}
 }
 
 @article{Pironio_2010,
@@ -871,7 +874,8 @@
   issn =         {0022-5193},
   archivePrefix ={ar{X}iv},
   eprint =       {0909.2832},
-  primaryClass = {q-bio.BM}
+  primaryClass = {q-bio.BM},
+  tag =          {bio}
 }
 
 @article{Bardyn_2009,
